# world_cup_26

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.app  Dockerfile.dashboard  README.md  alembic.ini  docker-compose.yml  fly.toml.example  pyproject.toml
.github/workflows/: ci.yml  frontend.yml
alembic/: env.py
alembic/versions/: 07715e364a9c_stage1_initial_schema.py  8555c64a4de5_phase3_match_xg.py  a4c0e1f2b3d4_users_followed_teams_auth.py  a7412b69aeb9_phase2_assets_squads_rankings.py  b8a2f9d04c11_venue_climate_match_features.py  c1d4f0e2a955_travel_km_diff_match_features.py  c312c32b3f8b_phase6_live_events.py  d2e5a6c83770_market_value_diff_match_features.py  d513c23fed82_phase4_match_features.py  e9b3a4f17d20_phase12_team_outcome_third_out_fourth.py  f0d214c8a3b1_elo_overrides.py
dashboard/: streamlit_app.py
dashboard/components/: api_client.py  forecast_header.py  plot_config.py  team_assets.py
dashboard/pages/: 1_Today.py  2_Match_Detail.py  3_Groups.py  4_Bracket.py  4_Bracket_Realisation.py  5_Track_Record.py  6_About.py  7_Operator.py  8_Team_Profile.py  9_Map.py
data/static/: host_cities_climate.json
docs/: ARCHITECTURE.md  LICENSES.md  deploy.md  methodology.md  operations.md
frontend/: .gitignore  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
frontend/e2e/: smoke.spec.ts
frontend/scripts/: sync-methodology.mjs
frontend/src/: mdx-components.tsx
scripts/: backtest_against_bookmaker.py  backtest_wc2018.py  backtest_wc2022.py  backtest_with_elo_prior.py  backtest_with_isotonic.py  build_features.py  calibration_sweep.py  db_load_from_parquet.py  download_kaggle_intl.py  fit_live_win_prob.py  persist_wc2026_predictions.py  refit_poisson_dc.py  refit_xgb.py  rerun_monte_carlo.py  scrape_eloratings.py
src/wc2026/: __init__.py
tests/fixtures/: World.tsv  fbref_match_log_sample.html  football_data_co_uk_sample.csv  football_data_org_sample.json  openfootball_cup_2026.txt  statsbomb_events_sample.json  thesportsdb_argentina.json  thesportsdb_empty.json  wikipedia_fifa_ranking_sample.html  wikipedia_squad_sample.txt
tests/integration/: test_db_roundtrip.py  test_eloratings_live.py  test_football_data_org_live.py  test_full_stack_smoke.py  test_live_replay.py
tests/unit/: test_api_routes.py  test_auth_models.py  test_blend.py  test_build_features_script.py  test_build_match_features.py  test_db_load_from_parquet.py  test_db_models.py  test_elo_prior.py  test_eval_backtest.py  test_eval_calibration.py  test_fit_live_win_prob.py  test_host_team.py  test_ingest_eloratings.py  test_ingest_fbref.py  (+40 more)
(+139 files in other folders)
