[project]
name = "wc2026-predictor"
version = "0.1.0"
description = "Calibrated probabilistic predictions for FIFA World Cup 2026."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Nico Fliegel", email = "nico.fliegel@gmail.com" }]
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "boto3>=1.35",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "kaggle>=2.1.2",
    # lxml is a runtime dep of pandas.read_html (fbref / wikipedia ingesters)
    # even though no Python module here imports it directly.
    "lxml>=5.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    # pyarrow backs every pandas .to_parquet / .read_parquet call.
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "requests-cache>=1.3.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sentry-sdk[fastapi]>=2.21",
    "shap>=0.49.0",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.47.0",
    "xgboost>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.1.0",
    "ruff>=0.15.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wc2026"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    # Skip integration + slow tests by default.
    # Run them with: uv run pytest -m integration / -m slow
    "-m",
    "not integration and not slow",
]
markers = [
    "integration: requires Postgres or external services (deselect with '-m \"not integration\"')",
    "slow: long-running test (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:dateutil.*",
]

[tool.coverage.run]
source = ["src/wc2026"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 0

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["data", "notebooks", ".venv"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "PL",
    "NPY",
    "PD",
]
ignore = [
    "PLR0913",
    "PLR2004",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "PLC0415"]
# FastAPI idioms: Depends() / Query() in argument defaults; HTTPException re-raise chain.
"src/wc2026/api/**" = ["B008"]
